--- a/index.html
+++ b/index.html
@@ -8,22 +8,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-<div id="app">
-    <h1>Bewerte Personen</h1>
-    <div class="rating-form">
-        <input v-model="newName" placeholder="Name der Person" />
-        <input v-model.number="newRating" type="number" placeholder="Bewertung (1-5)" min="1" max="5" />
-        <button @click="addRating">Bewertung hinzufügen</button>
-    </div>
-    <div class="ratings-list">
-        <h2>Bewertungen</h2>
-        <ul>
-            <li v-for="(rating, index) in ratings" :key="index">
-                <strong>{{ rating.name }}</strong>: {{ rating.stars }} Sterne
-            </li>
-        </ul>
-    </div>
-</div>
+<div id="app"></div>
 <script src="src/js/app.js"></script>
 </body>
 </html>
